--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Akhtar Munir, Deep Learning
 ---
 <div class="blurb">
+	<div class="about">
 	<h1>About Akhtar</h1>
           <p> A <em>self-motivated Ph.D. research fellow</em> with wide background of computer science, research, and development. 
             Hands on experience in developing algorithms and designing experiments for practical problems in computer vision and deep learning. 
@@ -14,4 +15,5 @@ title: Akhtar Munir, Deep Learning
 				<li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en">Google Scholar</a></li>
 				<li><a href="http://im.itu.edu.pk/people/">Research Lab (IML)</a></li>
 				</ul>
+		</div>
 </div><!-- /.blurb -->
