--- a/cv/index.html
+++ b/cv/index.html
@@ -20,7 +20,7 @@ title: Akhtar Munir, Deep Learning
 
 					<p> Iqbal, Javed, <strong>Muhammad Akhtar Munir</strong>, Arif Mahmood, Afsheen Rafaqat Ali, and Mohsen Ali. 
             "Leveraging orientation for weakly supervised object detection with application to firearm localization." Neurocomputing 440 (2021): 310-320.
-            Paper available at: <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122100151X">[Link]</a>.
+            Paper available at: <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122100151X">[Link]</a></p>
 
 
 	</div>
