--- a/cv/index.html
+++ b/cv/index.html
@@ -12,7 +12,7 @@ title: Akhtar Munir, Deep Learning
 					Intelligent Machines Lab<br>
 					Information Technology University<br>
 <!-- 					<abbr title="phone">P: </abbr> (123) 456-7890<br> -->
-					<span class="obfuscate">akhtar,munir@itu.edu.pk</span>
+					<span class="obfuscate">akhtar,munir@itu.edu.pk</span><br>
             <span class="obfuscate">its.akhtar90@gmail.com</span>
 					</address>
 
@@ -21,6 +21,10 @@ title: Akhtar Munir, Deep Learning
 					<p> Iqbal, Javed, <strong>Muhammad Akhtar Munir</strong>, Arif Mahmood, Afsheen Rafaqat Ali, and Mohsen Ali. 
             "Leveraging orientation for weakly supervised object detection with application to firearm localization." Neurocomputing 440 (2021): 310-320.
             Paper available at: <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122100151X">[Link]</a></p>
+	
+	<p> Basit, Abdul, <strong>Muhammad Akhtar Munir</strong>, Mohsen Ali, Naoufel Werghi, and Arif Mahmood. 
+		"Localizing Firearm Carriers By Identifying Human-Object Pairs." In 2020 IEEE International Conference on Image Processing (ICIP), pp. 2031-2035. IEEE, 2020.
+            Paper available at: <a href="https://ieeexplore.ieee.org/document/9190886">[Link]</a></p>
 
 
 	</div>
