--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@ layout: default
 title: Akhtar Munir, Deep Learning
 ---
 <div class="blurb">
+	<body>
+      <img src="mainpic_git.jpg" alt="profile">
+   	</body>
 	<h1>Hi, I'm Muhammad Akhtar Munir</h1>
           <p> A <em>self-motivated Ph.D. research fellow</em> with wide background of computer science, research, and development. 
             Hands on experience in developing algorithms and designing experiments for practical problems in computer vision and deep learning. 
