--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Akhtar Munir, Deep Learning
 ---
 <div class="blurb">
 	<body>
-      <img src="mainpic_git.jpg" alt="profile">
+      <img src="mainpic_git.jpg" alt="profile" width="245" height="275">
    	</body>
 	<h1>Hi, I'm Muhammad Akhtar Munir</h1>
           <p> A <em>self-motivated Ph.D. research fellow</em> with wide background of computer science, research, and development. 
