--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@ layout: default
 title: Akhtar Munir, Deep Learning
 ---
 <div class="blurb">
-	<body>
-      <img src="mainpic_git.jpg" alt="profile" width="245" height="275">
-   	</body>
+	<div class="row">
+		
+		
+	<div class="column">
 	<h1>Hi, I'm Muhammad Akhtar Munir</h1>
+	</div>
+		
+	<div class="column">
+    	<img src="img_snow.jpg" alt="Snow" style="width:100%">
+	<body>
+      	<img src="mainpic_git.jpg" alt="profile" width="245" height="275" style="float:right">
+   	</body>
+	</div>
+	</div>
+	
           <p> A <em>self-motivated Ph.D. research fellow</em> with wide background of computer science, research, and development. 
             Hands on experience in developing algorithms and designing experiments for practical problems in computer vision and deep learning. 
             Current research focuses on deep learning, domain adaptation, and object detection.
