--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Akhtar Munir, Deep Learning
 		
 	<div class="column">
 	<body>
-      	<img src="mainpic_git.jpg" alt="profile" width="245" height="275" style="float:right">
+      	<img src="mainpic_git_c.jpg" alt="profile" width="245" height="225" style="float:right">
    	</body>
 	</div>
 	</div>
