--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@ layout: default
 title: Akhtar Munir, Deep Learning
 ---
 <div class="blurb">
-	<div class="row">
+<!-- 	<div class="row"> -->
 		
 		
-	<div class="column">
+<!-- 	<div class="column"> -->
 	<h1>Hi, I'm Muhammad Akhtar Munir</h1>
-	</div>
+<!-- 	</div> -->
 		
-	<div class="column">
-	<body>
+<!-- 	<div class="column"> -->
+<!-- 	<body> -->
       	<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="245" height="225" style="float:right">
-   	</body>
-	</div>
-	</div>
+<!--    	</body> -->
+<!-- 	</div> -->
+<!-- 	</div> -->
 	
           <p> A <em>self-motivated Ph.D. research fellow</em> with wide background of computer science, research, and development. 
             Hands on experience in developing algorithms and designing experiments for practical problems in computer vision and deep learning. 
