--- a/cv/index.html
+++ b/cv/index.html
@@ -12,7 +12,7 @@ title: Akhtar Munir, Deep Learning
 					Intelligent Machines Lab<br>
 					Information Technology University<br>
 <!-- 					<abbr title="phone">P: </abbr> (123) 456-7890<br> -->
-					<span class="obfuscate">akhtar,munir@itu.edu.pk</span><br>
+					<span class="obfuscate">akhtar.munir@itu.edu.pk</span><br>
             <span class="obfuscate">its.akhtar90@gmail.com</span>
 					</address>
 
