--- a/index.html
+++ b/index.html
@@ -25,18 +25,15 @@ title: Akhtar Munir, Deep Learning
 	
 <!-- Project -->
 <a id="publications"</a>
-<h2>Preprints</h2>
+<h2>Publications</h2>
 <table>
 <!-- paper entry-->
 <tr>
-<td> - <br>&nbsp;<br>&nbsp;<br>&nbsp;</td>
+<td> <br>&nbsp;<br>&nbsp;</td>
 <td>
-
 <p> Iqbal, Javed, <strong>Muhammad Akhtar Munir</strong>, Arif Mahmood, Afsheen Rafaqat Ali, and Mohsen Ali.
 	"Leveraging orientation for weakly supervised object detection with application to firearm localization" Neurocomputing 440 (2021): 310-320.
 	Paper available at: <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122100151X">[Link]</a></p>
-[<a href= "https://arxiv.org/pdf/1905.01068.pdf">Paper</a>]
-</p>
 </td>
 </tr>
 </table>
