--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@ title: Akhtar Munir, Deep Learning
 <!-- Project -->
 <a id="publications"</a>
 <h2>Publications</h2>
-<table>
+<!-- <table> -->
 <!-- paper entry-->
-<tr>
-<td> <br>&nbsp;<br>&nbsp;</td>
-<td>
+<!-- <tr> -->
+<!-- <td> <br>&nbsp;<br>&nbsp;</td> -->
+<!-- <td> -->
 <p> Iqbal, Javed, <strong>Muhammad Akhtar Munir</strong>, Arif Mahmood, Afsheen Rafaqat Ali, and Mohsen Ali.
 	"Leveraging orientation for weakly supervised object detection with application to firearm localization" Neurocomputing 440 (2021): 310-320.
 	Paper available at: <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122100151X">[Link]</a></p>
-</td>
-</tr>
-</table>
+<!-- </td> -->
+<!-- </tr> -->
+<!-- </table> -->
 
 </div><!-- /.blurb -->
