--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ title: Akhtar Munir, Deep Learning
             Hands on experience in developing algorithms and designing experiments for practical problems in computer vision and deep learning. 
             Current research focuses on deep learning, domain adaptation, and object detection.
             <a href="/about">Read more about my life...</a></p>
-	</div><!-- /.blurb -->
+	
 <!-- Project -->
-<a id="publications"</a>
+<a id="publications" class="anchor"></a>
 <h2>Publications</h2>
-<table>
+<table class="imgtable">
 <!-- paper entry-->
 <tr>
 <td> <br>&nbsp;</td>
@@ -38,4 +38,4 @@ title: Akhtar Munir, Deep Learning
 </tr>
 </table>
 
-
+</div><!-- /.blurb -->
