--- a/index.html
+++ b/index.html
@@ -23,19 +23,40 @@ title: Akhtar Munir, Deep Learning
             Current research focuses on deep learning, domain adaptation, and object detection.
             <a href="/about">Read more about my life...</a></p>
 	
+	<td> <br>&nbsp;</td>
+<!-- 	<td> <br>&nbsp;</td> -->
 <!-- Project -->
 <a id="publications" class="anchor"></a>
-<h2>Publications</h2>
+<h2 style="color:#0600CE">Publications</h2>
 <table class="imgtable">
 <!-- paper entry-->
 <tr>
 <td> <br>&nbsp;</td>
 <td>
-<p> Iqbal, Javed, <strong>Muhammad Akhtar Munir</strong>, Arif Mahmood, Afsheen Rafaqat Ali, and Mohsen Ali.
+<p> Javed Iqbal, <strong>Muhammad Akhtar Munir</strong>, Arif Mahmood, Afsheen Rafaqat Ali, and Mohsen Ali.
 	"Leveraging orientation for weakly supervised object detection with application to firearm localization" Neurocomputing 440 (2021): 310-320.
 	Paper available at: <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122100151X">[Link]</a></p>
 </td>
 </tr>
+	
+	<tr>
+<td> <br>&nbsp;</td>
+<td>
+<p> Abdul Basit, <strong>Muhammad Akhtar Munir</strong>, Mohsen Ali, Naoufel Werghi, and Arif Mahmood. 
+		"Localizing Firearm Carriers By Identifying Human-Object Pairs." In 2020 IEEE International Conference on Image Processing (ICIP), pp. 2031-2035. IEEE, 2020.
+            Paper available at: <a href="https://ieeexplore.ieee.org/document/9190886">[Link]</a></p>
+</td>
+</tr>
+	
+		<tr>
+<td> <br>&nbsp;</td>
+<td>
+<p> Javed, Asad, Muhammad Fasihullah, <strong>Muhammad Akhtar Munir</strong>, Imran Usman, M. Farhan Shafique, Tariq Bashir, and Mehmood Ashraf Khan. 
+	"A new additive watermarking technique for multimodal biometric identification." Journal of Basic and Applied Scientific Research 3, no. 7 (2013): 935-942.
+            Paper available at: <a href="https://www.textroad.com/pdf/JBASR/J.%20Basic.%20Appl.%20Sci.%20Res.,%203(7)935-942,%202013.pdf">[Link]</a></p>
+</td>
+</tr>
+	
 </table>
 
 </div><!-- /.blurb -->
