--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: Akhtar Munir, Deep Learning
 <table class="imgtable">
 <!-- paper entry-->
 <tr>
-<td> <br></td>
+<!-- <td> <br></td> -->
 <td>
 <p> Javed Iqbal, <strong>Muhammad Akhtar Munir</strong>, Arif Mahmood, Afsheen Rafaqat Ali, and Mohsen Ali.
 	"Leveraging orientation for weakly supervised object detection with application to firearm localization" Neurocomputing 440 (2021): 310-320.
@@ -40,7 +40,7 @@ title: Akhtar Munir, Deep Learning
 </tr>
 	
 	<tr>
-<td> <br></td>
+<!-- <td> <br></td> -->
 <td>
 <p> Abdul Basit, <strong>Muhammad Akhtar Munir</strong>, Mohsen Ali, Naoufel Werghi, and Arif Mahmood. 
 		"Localizing Firearm Carriers By Identifying Human-Object Pairs." In 2020 IEEE International Conference on Image Processing (ICIP), pp. 2031-2035. IEEE, 2020.
@@ -49,7 +49,7 @@ title: Akhtar Munir, Deep Learning
 </tr>
 	
 		<tr>
-<td> <br>&nbsp;</td>
+<!-- <td> <br>&nbsp;</td> -->
 <td>
 <p> Javed, Asad, Muhammad Fasihullah, <strong>Muhammad Akhtar Munir</strong>, Imran Usman, M. Farhan Shafique, Tariq Bashir, and Mehmood Ashraf Khan. 
 	"A new additive watermarking technique for multimodal biometric identification." Journal of Basic and Applied Scientific Research 3, no. 7 (2013): 935-942.
