--- a/index.html
+++ b/index.html
@@ -58,5 +58,53 @@ title: Akhtar Munir, Deep Learning
 </tr>
 	
 </table>
+	
+	
+	
+	
+<!-- Project -->
+<a id="projects" class="anchor"></a>
+<h2 style="color:#0600CE">Projects</h2>
+<table class="imgtable">
+<!-- paper entry-->
+<tr>
+<!-- <td> <br></td> -->
+<td>
+<p> <strong>Domain Adaptation:</strong> I have been doing research related to Domain Adaptation for Object Detection.
+	My objective is to design the algorithm that effectively solves the problems of domain gap, where data distribution is different across the domain (source & target). 
+	Specifically, I am doing research in Unsupervised Domain Adaptation (source: labelled & target: unlabeled),
+	exploring self-training and adversarial-learning based methods.</p>
+</td>
+</tr>
+	
+<tr>
+<!-- <td> <br></td> -->
+<td>
+<p> <strong>Human Firearm Interaction Detection:</strong> I have been working on Human Object Interaction problems, leveraging firearm as object. 
+	Localizing objects in the complex scenario and associate it with right candidate (human) is a widely studied problem. 
+	We explore the attention-based methods to overcome the challenges of cluttered environment where object interaction could be wrongly associated to human.</p>
+</td>
+</tr>
+	
+		<tr>
+<!-- <td> <br>&nbsp;</td> -->
+<td>
+<p> <strong>Firearm Detection:</strong> I have worked on weakly supervised object detection with application to firearms. 
+	Without using oriented bounding box, our proposed method predicts oriented bounding boxes. 
+	We use axis aligned boxes and angle information (easy to annotate than oriented bounding boxes) in our pipeline, 
+	and we are able to mitigate background noise in axis aligned boxes with the knowledge of orientation.  </p>
+</td>
+</tr>
+	
+			<tr>
+<!-- <td> <br>&nbsp;</td> -->
+<td>
+<p> <strong>Medical Image Analysis:</strong> As a semester project, we aim to predict the blindness indirectly using retinal layers images with choroidal neovascular 
+	and diabetic macular edema categories. As a third category, drusen is for vision weakness and finally, normal category is for observation sample. 
+	This prediction of blindness helps for anti vascular endothelial growth factor treatment, that stops the retinal disease and make eye vision properly working. </p>
+</td>
+</tr>
+	
+</table>
 
 </div><!-- /.blurb -->
