--- a/index.html
+++ b/index.html
@@ -106,5 +106,42 @@ title: Akhtar Munir, Deep Learning
 </tr>
 	
 </table>
+	
+	
+	
+	
+	
+	
+	
+<!-- Project -->
+<a id="experience" class="anchor"></a>
+<h2 style="color:#0600CE">Experience</h2>
+<table class="imgtable">
+<!-- paper entry-->
+<tr>
+<!-- <td> <br></td> -->
+<td>
+<p> 
+Ph.D. Fellow (Full Scholarship) at Information Technology University (ITU) of Punjab, Lahore, Pakistan.
+	 <ul class="contacts">
+				<li>Duration: September 5, 2017 – Present</li>
+				<li>Association: Intelligent Machines Lab, Department of Computer Science, ITU</li>
+				<li><a href="http://im.itu.edu.pk/people/">Ph.D. Advisor: Dr. Mohsen Ali</a></li>
+				</ul>
+
+
+
+
+<!-- Lab Engineer at School of Electrical Engineering and Computer Science (SEECS), NUST, Islamabad, Pakistan. -->
+<!-- Duration: November 26, 2013 – September 4, 2017 -->
+<!-- Association: Department of Computing, SEECS, NUST -->
+
+	
+	</p>
+</td>
+</tr>
+
+	
+</table>
 
 </div><!-- /.blurb -->
