--- a/index.html
+++ b/index.html
@@ -129,18 +129,90 @@ Ph.D. Fellow (Full Scholarship) at Information Technology University (ITU) of Pu
 				<li><a href="http://im.itu.edu.pk/people/">Ph.D. Advisor: Dr. Mohsen Ali</a></li>
 				</ul>
 
-
-
-
-<!-- Lab Engineer at School of Electrical Engineering and Computer Science (SEECS), NUST, Islamabad, Pakistan. -->
-<!-- Duration: November 26, 2013 – September 4, 2017 -->
-<!-- Association: Department of Computing, SEECS, NUST -->
-
-	
 	</p>
 </td>
 </tr>
 
+
+
+<tr>
+<!-- <td> <br></td> -->
+<td>
+<p> 
+Lab Engineer at School of Electrical Engineering and Computer Science (SEECS), NUST, Islamabad, Pakistan.
+	 <ul class="contacts">
+				<li>Duration: November 26, 2013 – September 4, 2017</li>
+				<li>Association: Department of Computing, SEECS, NUST</li>
+				</ul>
+	</p>
+</td>
+</tr>
+
+	
+</table>
+
+
+
+
+
+
+
+
+
+
+<!-- Project -->
+<a id="education" class="anchor"></a>
+<h2 style="color:#0600CE">Education</h2>
+<table class="imgtable">
+<!-- paper entry-->
+<tr>
+<!-- <td> <br></td> -->
+<td>
+<p> 
+Doctor of Philosophy (PhD) in Computer Science <br>
+	Information Technology University, Lahore<br>
+	<strong>Thesis (in Progress): Domain Adaptation for Object Detection</strong>
+	<ul class="contacts">
+				<li>Sep’17-Present</li>
+				<li>CGPA: 3.50/4.0 (Coursework)</li>
+				<li>Courses: Deep Learning, Computer Vision, Machine Learning, Pattern Recognition,
+Probability & Stats</a></li>
+	</ul>
+</p>
+</td>
+</tr>
+
+
+<tr>
+<!-- <td> <br></td> -->
+<td>
+<p> 
+Master of Science (MS) in Computer Science <br>
+	COMSATS Institute of Information Technology, Islamabad<br>
+	<strong>Thesis: Ischemic Stroke Lesion Segmentation in MR Sequences Using MLP and SVM</strong>
+	<ul class="contacts">
+				<li>Feb’15-Jun’17</li>
+				<li>CGPA: 3.84/4.0</li>
+				<li>Courses: Artificial Intelligence, Digital Image Processing, Algorithms Analysis</a></li>
+	</ul>
+</p>
+</td>
+</tr>
+
+<tr>
+<!-- <td> <br></td> -->
+<td>
+<p> 
+Bachelor of Science (BS) in Computer Engineering <br>
+	COMSATS Institute of Information Technology, Islamabad<br>
+<!-- 	<strong>Thesis: Ischemic Stroke Lesion Segmentation in MR Sequences Using MLP and SVM</strong> -->
+	<ul class="contacts">
+				<li>Feb’09-Jan’13</li>
+				<li>CGPA: 3.38/4.0</li>
+	</ul>
+</p>
+</td>
+</tr>
 	
 </table>
 
