--- a/index.html
+++ b/index.html
@@ -216,4 +216,20 @@ Bachelor of Science (BS) in Computer Engineering <br>
 	
 </table>
 
+
+<!-- Project -->
+<a id="education" class="anchor"></a>
+<h2 style="color:#0600CE">Education</h2>
+<table class="imgtable">
+<!-- paper entry-->
+<tr>
+<!-- <td> <br></td> -->
+<td>
+<p> ACM Multimedia 2021 Conference</p>
+</td>
+</tr>
+
+	
+</table>
+
 </div><!-- /.blurb -->
