--- a/index.html
+++ b/index.html
@@ -218,14 +218,14 @@ Bachelor of Science (BS) in Computer Engineering <br>
 
 
 <!-- Project -->
-<a id="education" class="anchor"></a>
-<h2 style="color:#0600CE">Education</h2>
+<a id="services" class="anchor"></a>
+<h2 style="color:#0600CE">Services</h2>
 <table class="imgtable">
 <!-- paper entry-->
 <tr>
 <!-- <td> <br></td> -->
 <td>
-<p> ACM Multimedia 2021 Conference</p>
+<p> Reviewer in ACM Multimedia 2021 Conference</p>
 </td>
 </tr>
 
