--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Akhtar Munir, Deep Learning
 <!-- 	<td> <br>&nbsp;</td> -->
 <!-- Project -->
 <a id="publications" class="anchor"></a>
-<h2 style="color:#0600CE">Publications</h2>
+<h2>Publications</h2>
 <table class="imgtable">
 <!-- paper entry-->
 <tr>
@@ -64,7 +64,7 @@ title: Akhtar Munir, Deep Learning
 	
 <!-- Project -->
 <a id="projects" class="anchor"></a>
-<h2 style="color:#0600CE">Projects</h2>
+<h2>Projects</h2>
 <table class="imgtable">
 <!-- paper entry-->
 <tr>
@@ -115,7 +115,7 @@ title: Akhtar Munir, Deep Learning
 	
 <!-- Project -->
 <a id="experience" class="anchor"></a>
-<h2 style="color:#0600CE">Experience</h2>
+<h2>Experience</h2>
 <table class="imgtable">
 <!-- paper entry-->
 <tr>
@@ -162,7 +162,7 @@ Lab Engineer at School of Electrical Engineering and Computer Science (SEECS), N
 
 <!-- Project -->
 <a id="education" class="anchor"></a>
-<h2 style="color:#0600CE">Education</h2>
+<h2>Education</h2>
 <table class="imgtable">
 <!-- paper entry-->
 <tr>
@@ -219,7 +219,7 @@ Bachelor of Science (BS) in Computer Engineering <br>
 
 <!-- Project -->
 <a id="services" class="anchor"></a>
-<h2 style="color:#0600CE">Services</h2>
+<h2>Services</h2>
 <table class="imgtable">
 <!-- paper entry-->
 <tr>
