--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@ title: Akhtar Munir, Deep Learning
 <!-- 	<div class="column"> -->
 	<h1>Hi, I'm Muhammad Akhtar Munir</h1>
 <!-- 	</div> -->
+	
+	<address>
+		<strong>Affiliation</strong><br>
+		Intelligent Machines Lab<br>
+		Information Technology University (ITU)<br>
+	<!-- 					<abbr title="phone">P: </abbr> (123) 456-7890<br> -->
+		<span class="obfuscate">akhtar[dot]munir[at]itu[dot]edu[dot]pk</span><br>
+		<span class="obfuscate">its[dot]akhtar90[at]gmail[dot]com</span>
+		</address>
+	
+	<p>
+<!--               <span onclick="window.open('')" style="cursor: pointer"> -->
+<!--                 <i class="fa fa-twitter" aria-hidden="true"></i> -->
+<!--               </span> -->
+
+              <span onclick="window.open('https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/')" style="cursor: pointer">
+                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+              </span>
+
+              <span onclick="window.open('https://github.com/akhtarvision/')" style="cursor: pointer">
+                <i class="fa fa-github" aria-hidden="true"></i>
+              </span>
+
+              <span onclick="window.open('https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en')" style="cursor: pointer">
+                <i class="ai ai-google-scholar ai-lg" aria-hidden="true"></i>
+              </span>
+            </p>
 		
 <!-- 	<div class="column"> -->
 <!-- 	<body> -->
