--- a/index.html
+++ b/index.html
@@ -20,23 +20,6 @@ title: Akhtar Munir, Deep Learning
 		<span class="obfuscate">its[dot]akhtar90[at]gmail[dot]com</span>
 		</address>
 	
-	<p>
-<!--               <span onclick="window.open('')" style="cursor: pointer"> -->
-<!--                 <i class="fa fa-twitter" aria-hidden="true"></i> -->
-<!--               </span> -->
-
-              <span onclick="window.open('https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/')" style="cursor: pointer">
-                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-              </span>
-
-              <span onclick="window.open('https://github.com/akhtarvision/')" style="cursor: pointer">
-                <i class="fa fa-github" aria-hidden="true"></i>
-              </span>
-
-              <span onclick="window.open('https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en')" style="cursor: pointer">
-                <i class="ai ai-google-scholar ai-lg" aria-hidden="true"></i>
-              </span>
-            </p>
 		
 <!-- 	<div class="column"> -->
 <!-- 	<body> -->
@@ -48,7 +31,7 @@ title: Akhtar Munir, Deep Learning
           <p> A <em>self-motivated Ph.D. research fellow</em> with wide background of computer science, research, and development. 
             Hands on experience in developing algorithms and designing experiments for practical problems in computer vision and deep learning. 
             Current research focuses on deep learning, domain adaptation, and object detection.
-            <a href="/about">Read more about my life...</a></p>
+            <a href="#about">Read more about my life...</a></p>
 	
 	<td> <br>&nbsp;</td>
 <!-- 	<td> <br>&nbsp;</td> -->
@@ -256,6 +239,58 @@ Bachelor of Science (BS) in Computer Engineering <br>
 </td>
 </tr>
 
+<!-- Project -->
+<a id="about" class="anchor"></a>
+<h2>About</h2>
+<table class="imgtable">
+<!-- paper entry-->
+<tr>
+<!-- <td> <br></td> -->
+<td>
+<p> Coming Soon... </p>
+</td>
+</tr>
+	
+<!-- Project -->
+<a id="cv" class="anchor"></a>
+<h2>CV</h2>
+<table class="imgtable">
+<!-- paper entry-->
+<tr>
+<!-- <td> <br></td> -->
+<td>
+<p> Download CV as PDF: <a href="https://github.com/akhtarvision/akhtarvision.github.io/raw/main/CV-Akhtar-new.pdf" class="download"> Download CV</a></p>
+</td>
+</tr>
+
+	
+<!-- Project -->
+<a id="flinks" class="anchor"></a>
+<h2>Recommends</h2>
+<table class="imgtable">
+<!-- paper entry-->
+<tr>
+<!-- <td> <br></td> -->
+<td>
+<p> Coming Soon... </p>
+</td>
+</tr>
+	
+<!-- Project -->
+<a id="blog" class="anchor"></a>
+<h2>Blog</h2>
+<table class="imgtable">
+<!-- paper entry-->
+<tr>
+<!-- <td> <br></td> -->
+<td>
+<ul class="posts">
+{% for post in site.posts %}
+<li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+{% endfor %}
+</ul>
+</td>
+</tr>
 	
 </table>
 
