--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ title: Akhtar Munir, Deep Learning
 <!-- 	<div class="column"> -->
 	<h1>Hi, I'm Muhammad Akhtar Munir</h1>
 <!-- 	</div> -->
-	
+	      	<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right">
+
 	<address>
 		<strong>Affiliation</strong><br>
 		Intelligent Machines Lab<br>
@@ -23,7 +24,6 @@ title: Akhtar Munir, Deep Learning
 		
 <!-- 	<div class="column"> -->
 <!-- 	<body> -->
-      	<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right">
 <!--    	</body> -->
 <!-- 	</div> -->
 <!-- 	</div> -->
@@ -31,7 +31,8 @@ title: Akhtar Munir, Deep Learning
           <p> A <em>self-motivated Ph.D. research fellow</em> with wide background of computer science, research, and development. 
             Hands on experience in developing algorithms and designing experiments for practical problems in computer vision and deep learning. 
             Current research focuses on deep learning, domain adaptation, and object detection.
-            <a href="#about">Read more about my life...</a></p>
+<!--             <a href="#about">Read more about my life...</a> -->
+	</p>
 	
 	<td> <br>&nbsp;</td>
 <!-- 	<td> <br>&nbsp;</td> -->
