--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: Akhtar Munir, Deep Learning
           <p> A <em>self-motivated Ph.D. research fellow</em> with wide background of computer science, research, and development. 
             Hands on experience in developing algorithms and designing experiments for practical problems in computer vision and deep learning. 
             Current research focuses on deep learning, domain adaptation, and object detection.
-<!--             <a href="#about">Read more about my life...</a> -->
+            <a href="#about">Read more about my life...</a>
 	</p>
 	
 	<td> <br>&nbsp;</td>
@@ -240,6 +240,8 @@ Bachelor of Science (BS) in Computer Engineering <br>
 </td>
 </tr>
 
+	</table>
+
 <!-- Project -->
 <a id="about" class="anchor"></a>
 <h2>About</h2>
@@ -251,7 +253,7 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <p> Coming Soon... </p>
 </td>
 </tr>
-	
+	</table>
 <!-- Project -->
 <a id="cv" class="anchor"></a>
 <h2>CV</h2>
@@ -263,7 +265,7 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <p> Download CV as PDF: <a href="https://github.com/akhtarvision/akhtarvision.github.io/raw/main/CV-Akhtar-new.pdf" class="download"> Download CV</a></p>
 </td>
 </tr>
-
+</table>
 	
 <!-- Project -->
 <a id="flinks" class="anchor"></a>
@@ -276,6 +278,7 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <p> Coming Soon... </p>
 </td>
 </tr>
+	</table>
 	
 <!-- Project -->
 <a id="blog" class="anchor"></a>
