--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@ title: Akhtar Munir, Deep Learning
 	<address>
 		<strong>Affiliation</strong><br>
 		Intelligent Machines Lab<br>
-		Information Technology University (ITU)<br>
-	<!-- 					<abbr title="phone">P: </abbr> (123) 456-7890<br> -->
+		Information Technology University (ITU)<br><br>
+		Contact Emails:<br>
 		<span class="obfuscate">akhtar[dot]munir[at]itu[dot]edu[dot]pk</span><br>
 		<span class="obfuscate">its[dot]akhtar90[at]gmail[dot]com</span>
 		</address>
+	<br><br>
+	
+		<ul class="contacts">
+		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a></li>
+		<li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en">Google Scholar</a></li>
+		<li><a href="http://im.itu.edu.pk/people/">Research Lab (IML)</a></li>
+		</ul>
 	
 		
 <!-- 	<div class="column"> -->
