--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Akhtar Munir, Deep Learning
 	      	<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right">
 
 	<address>
-		<strong>Affiliation</strong><br>
+		<strong>Ph.D. Student</strong><br>
 		Intelligent Machines Lab<br>
 		Information Technology University (ITU)<br><br>
 		Contact Emails:<br>
@@ -22,7 +22,7 @@ title: Akhtar Munir, Deep Learning
 		</address>
 	<br><br>
 	
-		<ul class="contacts">
+		<ul class="social">
 		<li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/">Linkedin</a></li>
 		<li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en">Google Scholar</a></li>
 		<li><a href="http://im.itu.edu.pk/people/">Research Lab (IML)</a></li>
