--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Akhtar Munir, Deep Learning
+title: Akhtar, Deep Learning
 ---
 
 <div class="blurb">
@@ -15,7 +15,7 @@ title: Akhtar Munir, Deep Learning
 	      	<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right">
 
 	<address>
-		<strong>Ph.D. Student</strong><br>
+		<strong>Ph.D. Student (Computer Vision & Deep Learning)</strong><br>
 		Intelligent Machines Lab<br>
 		Information Technology University (ITU)<br><br>
 		Contact Emails:<br>
@@ -71,7 +71,7 @@ title: Akhtar Munir, Deep Learning
 		<tr>
 <!-- <td> <br>&nbsp;</td> -->
 <td>
-<p> Javed, Asad, Muhammad Fasihullah, <strong>Muhammad Akhtar Munir</strong>, Imran Usman, M. Farhan Shafique, Tariq Bashir, and Mehmood Ashraf Khan. 
+<p> Asad Javed, Muhammad Fasihullah, <strong>Muhammad Akhtar Munir</strong>, Imran Usman, M. Farhan Shafique, Tariq Bashir, and Mehmood Ashraf Khan. 
 	"A new additive watermarking technique for multimodal biometric identification." Journal of Basic and Applied Scientific Research 3, no. 7 (2013): 935-942.
             Paper available at: <a href="https://www.textroad.com/pdf/JBASR/J.%20Basic.%20Appl.%20Sci.%20Res.,%203(7)935-942,%202013.pdf">[Link]</a></p>
 </td>
@@ -87,15 +87,12 @@ title: Akhtar Munir, Deep Learning
 <h2>Projects</h2>
 <table class="imgtable">
 <!-- paper entry-->
-<tr>
-<!-- <td> <br></td> -->
-<td>
+
 <p> <strong>Domain Adaptation:</strong> I have been doing research related to Domain Adaptation for Object Detection.
 	My objective is to design the algorithm that effectively solves the problems of domain gap, where data distribution is different across the domain (source & target). 
 	Specifically, I am doing research in Unsupervised Domain Adaptation (source: labelled & target: unlabeled),
 	exploring self-training and adversarial-learning based methods.</p>
-</td>
-</tr>
+
 	
 <tr>
 <!-- <td> <br></td> -->
@@ -138,9 +135,7 @@ title: Akhtar Munir, Deep Learning
 <h2>Experience</h2>
 <table class="imgtable">
 <!-- paper entry-->
-<tr>
-<!-- <td> <br></td> -->
-<td>
+
 <p> 
 Ph.D. Fellow (Full Scholarship) at Information Technology University (ITU) of Punjab, Lahore, Pakistan.
 	 <ul class="contacts">
@@ -150,8 +145,7 @@ Ph.D. Fellow (Full Scholarship) at Information Technology University (ITU) of Pu
 				</ul>
 
 	</p>
-</td>
-</tr>
+
 
 
 
@@ -185,9 +179,7 @@ Lab Engineer at School of Electrical Engineering and Computer Science (SEECS), N
 <h2>Education</h2>
 <table class="imgtable">
 <!-- paper entry-->
-<tr>
-<!-- <td> <br></td> -->
-<td>
+
 <p> 
 Doctor of Philosophy (PhD) in Computer Science <br>
 	Information Technology University, Lahore<br>
@@ -199,8 +191,7 @@ Doctor of Philosophy (PhD) in Computer Science <br>
 Probability & Stats</a></li>
 	</ul>
 </p>
-</td>
-</tr>
+
 
 
 <tr>
@@ -242,12 +233,9 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <h2>Services</h2>
 <table class="imgtable">
 <!-- paper entry-->
-<tr>
-<!-- <td> <br></td> -->
-<td>
+
 <p> Reviewer in ACM Multimedia 2021 Conference</p>
-</td>
-</tr>
+
 
 	</table>
 
@@ -256,24 +244,18 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <h2>About</h2>
 <table class="imgtable">
 <!-- paper entry-->
-<tr>
-<!-- <td> <br></td> -->
-<td>
+
 <p> Coming Soon... </p>
-</td>
-</tr>
+
 	</table>
 <!-- Project -->
 <a id="cv" class="anchor"></a>
 <h2>CV</h2>
 <table class="imgtable">
 <!-- paper entry-->
-<tr>
-<!-- <td> <br></td> -->
-<td>
+
 <p> Download CV as PDF: <a href="https://github.com/akhtarvision/akhtarvision.github.io/raw/main/CV-Akhtar-new.pdf" class="download"> Download CV</a></p>
-</td>
-</tr>
+
 </table>
 	
 <!-- Project -->
@@ -281,12 +263,9 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <h2>Recommends</h2>
 <table class="imgtable">
 <!-- paper entry-->
-<tr>
-<!-- <td> <br></td> -->
-<td>
+
 <p> Coming Soon... </p>
-</td>
-</tr>
+
 	</table>
 	
 <!-- Project -->
@@ -294,16 +273,13 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <h2>Blog</h2>
 <table class="imgtable">
 <!-- paper entry-->
-<tr>
-<!-- <td> <br></td> -->
-<td>
+
 <ul class="posts">
 {% for post in site.posts %}
 <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 {% endfor %}
 </ul>
-</td>
-</tr>
+
 	
 </table>
 
