--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ title: Akhtar, Deep Learning
 	</p>
 	
 	<td> <br>&nbsp;</td>
+	<td> <br>&nbsp;</td>
+	<td> <br>&nbsp;</td>
 <!-- 	<td> <br>&nbsp;</td> -->
 <!-- Project -->
 <a id="publications" class="anchor"></a>
@@ -81,7 +83,9 @@ title: Akhtar, Deep Learning
 	
 	
 	
-	
+	<td> <br>&nbsp;</td>
+	<td> <br>&nbsp;</td>
+	<td> <br>&nbsp;</td>
 <!-- Project -->
 <a id="projects" class="anchor"></a>
 <h2>Projects</h2>
@@ -128,7 +132,9 @@ title: Akhtar, Deep Learning
 	
 	
 	
-	
+	<td> <br>&nbsp;</td>
+	<td> <br>&nbsp;</td>
+	<td> <br>&nbsp;</td>
 	
 <!-- Project -->
 <a id="experience" class="anchor"></a>
@@ -248,6 +254,10 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <p> Coming Soon... </p>
 
 	</table>
+
+<td> <br>&nbsp;</td>
+	<td> <br>&nbsp;</td>
+	<td> <br>&nbsp;</td>
 <!-- Project -->
 <a id="cv" class="anchor"></a>
 <h2>CV</h2>
@@ -258,6 +268,10 @@ Bachelor of Science (BS) in Computer Engineering <br>
 
 </table>
 	
+
+<td> <br>&nbsp;</td>
+	<td> <br>&nbsp;</td>
+	<td> <br>&nbsp;</td>
 <!-- Project -->
 <a id="flinks" class="anchor"></a>
 <h2>Recommends</h2>
@@ -268,6 +282,9 @@ Bachelor of Science (BS) in Computer Engineering <br>
 
 	</table>
 	
+<td> <br>&nbsp;</td>
+	<td> <br>&nbsp;</td>
+	<td> <br>&nbsp;</td>
 <!-- Project -->
 <a id="blog" class="anchor"></a>
 <h2>Blog</h2>
