--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ title: Akhtar, Deep Learning
 <!-- 	</div> -->
 	      	<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right">
 
-	<address>
-		<strong>Ph.D. Student (Computer Vision & Deep Learning)</strong><br>
+	<address style="color:#850E08;">
+		<strong> Ph.D. Student (Computer Vision & Deep Learning)</strong><br>
 		Intelligent Machines Lab<br>
 		Information Technology University (ITU)<br><br>
 		Contact Emails:<br>
@@ -101,7 +101,7 @@ title: Akhtar, Deep Learning
 <td>
 <p> <strong>Human Firearm Interaction Detection:</strong> I have been working on Human Object Interaction problems, leveraging firearm as object. 
 	Localizing objects in the complex scenario and associate it with right candidate (human) is a widely studied problem. 
-	We explore the attention-based methods to overcome the challenges of cluttered environment where object interaction could be wrongly associated to human.</p>
+	This project explores the attention-based methods to overcome the challenges of cluttered environment where object interaction could be wrongly associated to human.</p>
 </td>
 </tr>
 	
@@ -110,17 +110,17 @@ title: Akhtar, Deep Learning
 <td>
 <p> <strong>Firearm Detection:</strong> I have worked on weakly supervised object detection with application to firearms. 
 	Without using oriented bounding box, our proposed method predicts oriented bounding boxes. 
-	We use axis aligned boxes and angle information (easy to annotate than oriented bounding boxes) in our pipeline, 
-	and we are able to mitigate background noise in axis aligned boxes with the knowledge of orientation.  </p>
+	This method uses axis aligned boxes and angle information (easy to annotate than oriented bounding boxes) in our pipeline, 
+	and able to mitigate background noise in axis aligned boxes with the knowledge of orientation.  </p>
 </td>
 </tr>
 	
 			<tr>
 <!-- <td> <br>&nbsp;</td> -->
 <td>
-<p> <strong>Medical Image Analysis:</strong> As a semester project, we aim to predict the blindness indirectly using retinal layers images with choroidal neovascular 
+<p> <strong>Medical Image Analysis:</strong> As a semester project, this aims to predict the blindness indirectly using retinal layers images with choroidal neovascular 
 	and diabetic macular edema categories. As a third category, drusen is for vision weakness and finally, normal category is for observation sample. 
-	This prediction of blindness helps for anti vascular endothelial growth factor treatment, that stops the retinal disease and make eye vision properly working. </p>
+	The prediction of blindness helps for anti vascular endothelial growth factor treatment, that stops the retinal disease and make eye vision properly working. </p>
 </td>
 </tr>
 	
@@ -141,7 +141,7 @@ title: Akhtar, Deep Learning
 <p> 
 Ph.D. Fellow (Full Scholarship) at Information Technology University (ITU) of Punjab, Lahore, Pakistan.
 	 <ul class="contacts">
-				<li>Duration: September 5, 2017 – Present</li>
+				<li>Duration: September 2017 – Present</li>
 				<li>Association: Intelligent Machines Lab, Department of Computer Science, ITU</li>
 				<li><a href="http://im.itu.edu.pk/people/">Ph.D. Advisor: Dr. Mohsen Ali</a></li>
 				</ul>
@@ -157,7 +157,7 @@ Ph.D. Fellow (Full Scholarship) at Information Technology University (ITU) of Pu
 <p> 
 Lab Engineer at School of Electrical Engineering and Computer Science (SEECS), NUST, Islamabad, Pakistan.
 	 <ul class="contacts">
-				<li>Duration: November 26, 2013 – September 4, 2017</li>
+				<li>Duration: November 2013 – September 2017</li>
 				<li>Association: Department of Computing, SEECS, NUST</li>
 				</ul>
 	</p>
@@ -187,9 +187,9 @@ Doctor of Philosophy (PhD) in Computer Science <br>
 	Information Technology University, Lahore<br>
 	<strong>Thesis (in Progress): Domain Adaptation for Object Detection</strong>
 	<ul class="contacts">
-				<li>Sep’17-Present</li>
-				<li>CGPA: 3.50/4.0 (Coursework)</li>
-				<li>Courses: Deep Learning, Computer Vision, Machine Learning, Pattern Recognition,
+				<li>September 2017 - Present</li>
+<!-- 				<li>CGPA: 3.50/4.0 (Coursework)</li> -->
+				<li>Major Courses: Deep Learning, Computer Vision, Machine Learning, Pattern Recognition,
 Probability & Stats</a></li>
 	</ul>
 </p>
@@ -204,9 +204,9 @@ Master of Science (MS) in Computer Science <br>
 	COMSATS Institute of Information Technology, Islamabad<br>
 	<strong>Thesis: Ischemic Stroke Lesion Segmentation in MR Sequences Using MLP and SVM</strong>
 	<ul class="contacts">
-				<li>Feb’15-Jun’17</li>
-				<li>CGPA: 3.84/4.0</li>
-				<li>Courses: Artificial Intelligence, Digital Image Processing, Algorithms Analysis</a></li>
+				<li>February 2015 - June 2017</li>
+<!-- 				<li>CGPA: 3.84/4.0</li> -->
+				<li>Major Courses: Artificial Intelligence, Digital Image Processing, Algorithms Analysis</a></li>
 	</ul>
 </p>
 </td>
@@ -218,10 +218,11 @@ Master of Science (MS) in Computer Science <br>
 <p> 
 Bachelor of Science (BS) in Computer Engineering <br>
 	COMSATS Institute of Information Technology, Islamabad<br>
-<!-- 	<strong>Thesis: Ischemic Stroke Lesion Segmentation in MR Sequences Using MLP and SVM</strong> -->
+	<strong>Final Year Project: Digital Watermarking in Multimodal Biometrics Domain</strong>
 	<ul class="contacts">
-				<li>Feb’09-Jan’13</li>
-				<li>CGPA: 3.38/4.0</li>
+				<li>February 2009 - January 2013</li>
+<!-- 				<li>CGPA: 3.38/4.0</li> -->
+				<li>Major Courses: Data Structures and Algorithms, Operating Systems, Numerical Computations</a></li>
 	</ul>
 </p>
 </td>
