--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@ title: Akhtar, Deep Learning
 <!-- 	</div> -->
 	      	<img class="roundImg" src="mainpic_git_c.jpg" alt="profile" width="188" height="170" style="float:right">
 
-	<address style="color:#850E08;">
+	<address>
 		<strong> Ph.D. Student (Computer Vision & Deep Learning)</strong><br>
 		Intelligent Machines Lab<br>
 		Information Technology University (ITU)<br><br>
 		Contact Emails:<br>
-		<span class="obfuscate">akhtar[dot]munir[at]itu[dot]edu[dot]pk</span><br>
-		<span class="obfuscate">its[dot]akhtar90[at]gmail[dot]com</span>
+		<span style="color:#850E08;" class="obfuscate">akhtar[DOT]munir[AT]itu[DOT]edu[DOT]pk</span><br>
+		<span style="color:#850E08;" class="obfuscate">its[DOT]akhtar90[AT]gmail[DOT]com</span>
 		</address>
 	<br><br>
 	
