--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ title: Akhtar, Deep Learning
 		Intelligent Machines Lab<br>
 		Information Technology University (ITU)<br><br>
 		Contact Emails:<br>
-		<span style="font-size:1.1rem; color:#850E08;" class="obfuscate">akhtar[DOT]munir[AT]itu[DOT]edu[DOT]pk</span><br>
-		<span style="font-size:1.1rem; color:#850E08;" class="obfuscate">its[DOT]akhtar90[AT]gmail[DOT]com</span>
+		<span style="color:#850E08;" class="obfuscate">akhtar[DOT]munir[AT]itu[DOT]edu[DOT]pk</span><br>
+		<span style="color:#850E08;" class="obfuscate">its[DOT]akhtar90[AT]gmail[DOT]com</span>
 		</address>
 	<br><br>
 	
