--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@ title: Akhtar, Deep Learning
 <h2>Publications</h2>
 <table class="imgtable">
 <!-- paper entry-->
+	
+	<!-- <tr> -->
+<!-- <td> <br></td> -->
+<!-- <td> -->
+<p> <strong>Muhammad Akhtar Munir</strong>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali.
+	"Synergizing between Self-Training and Adversarial Learning for Domain Adaptive Object Detection" <strong>NeurIPS</strong> (2021).
+	Paper available at: <a href="">[ComingSoon]</a></p>
+<!-- </td> -->
+<!-- </tr> -->
+	
 <!-- <tr> -->
 <!-- <td> <br></td> -->
 <!-- <td> -->
