--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <!-- paper entry-->
 
 <p> Reviewer in ACM Multimedia 2021 Conference</p>
+<p> Scholarship: PhD Fellowship, from Information Technology University, Lahore, Pakistan</p>
+<p> Summer School: EEML Summer School, Virtual Budapest, Hungary, 2021: CERTIFICATE</p>
 
 
 	</table>
