--- a/index.html
+++ b/index.html
@@ -247,9 +247,12 @@ Bachelor of Science (BS) in Computer Engineering <br>
 <table class="imgtable">
 <!-- paper entry-->
 
-<p> Reviewer in ACM Multimedia 2021 Conference</p>
-<p> Scholarship: PhD Fellowship, from Information Technology University, Lahore, Pakistan</p>
-<p> Summer School: EEML Summer School, Virtual Budapest, Hungary, 2021: CERTIFICATE</p>
+<ul>
+  <li>Reviewer in ACM Multimedia 2021 Conference</li>
+  <li>Scholarship: PhD Fellowship, from Information Technology University, Lahore, Pakistan</li>
+  <li>Summer School: EEML Summer School, Virtual Budapest, Hungary, 2021: <a href="https://drive.google.com/file/u/2/d/14v6LukMF6j8rmwnrY_Os2BlUm1cXGlVi/view">CERTIFICATE</a></li>
+</ul>
+<p>Eastern European Machine Learning (EEML) is a one-week summer school focused on machine learning and artificial intelligence</p>
 
 
 	</table>
